@@ -1,6 +1,7 @@
 20/7/12 started 7.30.0
 - support "rs" mode in vips7
 - add --vips-version cmdline arg
+- fix --without-tiff / exr / jpeg / png / magick
 
 19/3/12 started 7.29.0
 - sanity-check PNG read geometry
